--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,38 @@
-application.api.version=v1
+app.paths.user-icons=./data/user/icon
 
-quarkus.http.root-path=api/${application.api.version}
+quarkus.http.root-path=api/v1
 
-quarkus.oidc.auth-server-url=http://localhost/auth/realms/ispeak
-quarkus.oidc.token.issuer=http://localhost/auth/realms/ispeak
+quarkus.oidc.auth-server-url=http://localhost:8080/realms/ispeak
+quarkus.oidc.token.issuer=http://localhost:8080/realms/ispeak
+
+%prod.quarkus.oidc.auth-server-url=http://localhost/auth/realms/ispeak
+%prod.quarkus.oidc.token.issuer=http://localhost/auth/realms/ispeak
+
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=/.*/
+
 
 quarkus.oidc.client-id=ispeak-backend
 quarkus.oidc.credentials.secret=wcMVWKitBOf1cFXtWAi4Gyj5atScuDLd
 quarkus.oidc.application-type=service
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=admin
+quarkus.datasource.password=admin
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ispeak
+quarkus.hibernate-orm.database.generation=drop-and-create
+
+quarkus.smallrye-openapi.auto-add-security=false
+
+quarkus.swagger-ui.oauth-client-id=ispeak-backend
+quarkus.swagger-ui.oauth-client-secret=wcMVWKitBOf1cFXtWAi4Gyj5atScuDLd
+quarkus.swagger-ui.oauth-use-pkce=false
+quarkus.swagger-ui.oauth-use-pkce-with-authorization-code-grant=false
+quarkus.swagger-ui.oauth-realm=ispeak
+quarkus.swagger-ui.oauth-scopes=openid
+quarkus.swagger-ui.oauth2-redirect-url=http://localhost:8081/api/v1/q/swagger-ui/oauth2-redirect.html
+
+
+quarkus.swagger-ui.enabled=true
 
 quarkus.http.port=8081
